--- a/src/app/basic-form/basic-form.component.css
+++ b/src/app/basic-form/basic-form.component.css
@@ -36,8 +36,38 @@ form{
     background-color: #252932;
 }
 
+.input-error{
+    border: 2px solid #ff0000aa;
+}
+
+.error-img{
+    position: absolute;
+    right: 0;
+    margin-right: 70px;
+}
+
 textarea{
     resize: none;
+}
+
+#infotoggle{
+    transform: scale(0.75);
+    margin-right: 330px;
+}
+
+.infomsg{
+    position: absolute;
+    display: none;
+    padding: 5px;
+    margin: auto;
+    border-radius: 6px;
+    color: black;
+    background-color: white;
+    margin-left: 350px;
+}
+
+#infotoggle:hover ~ .infomsg{
+    display: block;
 }
 
 @media screen and (max-width: 900px){
