--- a/src/app/basic-form/basic-form.component.html
+++ b/src/app/basic-form/basic-form.component.html
@@ -1,33 +1,46 @@
 <p-scrollPanel [style]="formHeight" styleClass="custom">
-    <form class="form-padding">
+    <form class="form-padding" [formGroup]="myForm">
 
         <div class="flexbox">
             <div class="form-inline">
-                <label class="form-label">Sample 1</label>
-                <input type="text" class="form-control">
+                <label for="s1" class="form-label" required="required">Sample 1</label>
+                <input type="text" id="s1" class="form-control" formControlName="sample1"
+                    [class.input-error]="myForm.controls.sample1.touched && !myForm.controls.sample1.value">
+                <img class="error-img" src="assets/icons8-high-importance-30.png" alt="exclamation"
+                    [hidden]="!(myForm.controls.sample1.touched && !myForm.controls.sample1.value)">
+                <img class="error-img" src="assets/icons8-checked-30.png" alt="exclamation"
+                    [hidden]="myForm.controls.sample1.errors">
             </div>
 
             <div class="form-inline">
-                <label class="form-label">Sample 2</label>
-                <textarea rows="5" class="form-control"></textarea>
+                <label class="form-label" required="required">Sample 2</label>
+                <textarea rows="5" class="form-control" formControlName="sample2"
+                    [class.input-error]="myForm.controls.sample2.touched && !myForm.controls.sample2.value"></textarea>
+                <img class="error-img" src="assets/icons8-high-importance-30.png" alt="exclamation"
+                    [hidden]="!(myForm.controls.sample2.touched && !myForm.controls.sample2.value)">
             </div>
 
             <div class="form-inline">
-                <label class="form-label">Sample 3</label>
-                <input type="text" class="form-control">
+                <label class="form-label" required="required">Sample 3</label>
+                <input type="text" class="form-control" formControlName="sample3"
+                    [class.input-error]="myForm.controls.sample3.touched && !myForm.controls.sample3.value">
+                <img class="error-img" src="assets/icons8-high-importance-30.png" alt="exclamation"
+                    [hidden]="!(myForm.controls.sample3.touched && !myForm.controls.sample3.value)">
             </div>
 
             <div class="form-inline">
-                <label class="form-label">Sample 4</label>
-                <input type="text" class="form-control">
-                <label class="form-label">Sample 5</label>
-                <input type="text" class="form-control">
+                <mat-slide-toggle formControlName="slide1" #s1 (change)="slideToggle(s2)" class="input-flex" style="margin-right: 70px">Option 1</mat-slide-toggle>
+                <mat-slide-toggle formControlName="slide2" #s2 (change)="slideToggle(s1)" class="input-flex" style="margin-right: 20px">Option 2</mat-slide-toggle>
+                <img src="assets/icons8-info-50.png" alt="info" id="infotoggle">
+                <p class="infomsg">Either select Option 1 or Option 2</p>
+                <label class="form-label" required="required">Date</label>
+                <input type="date" class="form-control" formControlName="sample5"
+                    [class.input-error]="myForm.controls.sample5.touched && myForm.controls.sample5.errors">
             </div>
             <div class="form-inline">
                 <label class="form-label">Select City</label>
                 <ng-multiselect-dropdown [placeholder]="'Select City'" [data]="dropdownList"
-                    [(ngModel)]="selectedItems" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)"
-                    (onSelectAll)="onSelectAll($event)">
+                    [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
                 </ng-multiselect-dropdown>
             </div>
             <div class="form-inline">
