--- a/Project Files/src/app/app.component.html
+++ b/Project Files/src/app/app.component.html
@@ -8,7 +8,67 @@
 
   <section class="row header">
     <div class="content">
-      <img class="pointer" src="assets/round_dehaze_white_18dp.png" alt="ham">
+      <img class="pointer" src="assets/round_dehaze_white_18dp.png" alt="ham" id="menu">
+      <div class="menu-content">
+        <div class="flex-container">
+          <div class="flex-item">
+            <h6>SubMenu 1</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 2</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 3</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 4</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 5</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 6</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 7</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+          </div>
+          <div class="flex-item">
+            <h6>SubMenu 8</h6>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+            <li><a href="#">Link 5</a></li>
+          </div>
+        </div>
+      </div>
 
       <div class="dropdown">
         <button mat-button id="cretedropdown" class="text-white">
@@ -19,13 +79,15 @@
         <div class="dropdown-content">
           <h5 class="h-list-heading">Lists</h5>
           <ul class="h-list">
-            <li><span class="h-list-span h-list-span-first">&nbsp;</span><button class="h-list-item">Link - 1</button></li>
+            <li><span class="h-list-span h-list-span-first">&nbsp;</span><button class="h-list-item">Link - 1</button>
+            </li>
             <li><span class="h-list-span">&nbsp;</span><button class="h-list-item">Link - 2</button></li>
             <li><span class="h-list-span">&nbsp;</span><button class="h-list-item">Link - 3</button></li>
           </ul>
           <h5 class="h-list-heading">Lists</h5>
           <ul class="h-list">
-            <li><span class="h-list-span h-list-span-first">&nbsp;</span><button class="h-list-item">Link - 1</button></li>
+            <li><span class="h-list-span h-list-span-first">&nbsp;</span><button class="h-list-item">Link - 1</button>
+            </li>
             <li><span class="h-list-span">&nbsp;</span><button class="h-list-item">Link - 2</button></li>
             <li><span class="h-list-span">&nbsp;</span><button class="h-list-item">Link - 3</button></li>
           </ul>
