--- a/Project Files/src/app/basic-form/basic-form.component.css
+++ b/Project Files/src/app/basic-form/basic-form.component.css
@@ -70,6 +70,70 @@ textarea{
     display: block;
 }
 
+.popup-container{
+    display: none;
+    position: fixed;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(250,250,250,0.3);
+    z-index: 100;
+}
+
+.popup-container .popup-content{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    height: 80%;
+}
+
+.popup-container .popup-content .popup-header{
+    flex: 0 1 auto;
+    background-color: #24292D;
+    padding: 15px;
+    font-size: 1.3rem;
+}
+
+.popup-container .popup-content .popup-body{
+    flex: 1 1 auto;
+    background-color: #30343D;
+    padding: 25px;
+    color: white;
+    overflow: auto;
+}
+
+.popup-container .popup-content .popup-footer{
+    flex: 0 1 auto;
+    background-color: #24292D;
+    padding: 15px 30px;
+}
+
+.popup-select{
+    color: white;
+    width: 15%;
+    border: none;
+    background-color: #252932;
+    padding: 10px;
+}
+
+.popup-input{
+    background-color: #252932;
+    color: white;
+    padding: 10px;
+    border: none;
+    width: 30%;
+}
+
+.popup-btn{
+    padding: 10px;
+}
+
 @media screen and (max-width: 900px){
 
     .form-padding{
