--- a/Project Files/src/styles.css
+++ b/Project Files/src/styles.css
@@ -71,6 +71,21 @@ label[required="required"]::after{
     font-size: 0.8rem;
 }
 
+.mat-form-field{
+    flex: 1 1 auto;
+    margin-right: 30px;
+    background-color: #252932;
+    border-radius: 5px;
+}
+
+mat-form-field input{
+    min-height: 50px;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-underline{
+    display: none;
+}
+
 @media screen and (min-width: 800px){
 
     .mat-horizontal-stepper-header-container{
